--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="Name">Name</label>
+		<input type="text" id="name" required>
+
+		<label for="Email">Email</label>
+		<input type="email" id="email" required>
+
+		<label for="gender_m">Male</label>
+		<input type="radio" name="gender" required>
+		<label for="gender_f">Female</label>
+			<input type="radio" name="gender" required>
+
+		<select id="cars">
+		<label for="Car">Car Brands</label>
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+
+		<label for="Car Age">Car Age</label>
+			<input type="number" id="carage" required>
+
+		
+		<label for="dop">Date of Purchase</label>
+			<input type="date" id="dop" required>
+
+		
+		<label for="Password">Password</label>
+			<input type="password" id="password" required>
+
+		<input type="submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
