--- a/main.html
+++ b/main.html
@@ -9,16 +9,16 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form method="post">
-		<label for="Name">Name</label>
+		<label for="name">Name</label>
 		<input type="text" id="name" required>
 
-		<label for="Email">Email</label>
+		<label for="email">Email</label>
 		<input type="email" id="email" required>
 
 		<label for="gender_m">Male</label>
-		<input type="radio" name="gender" required>
+		<input type="radio" name="gender_m" required>
 		<label for="gender_f">Female</label>
-			<input type="radio" name="gender" required>
+			<input type="radio" name="gender_f" required>
 
 		<select id="cars">
 		<label for="Car">Car Brands</label>
@@ -27,7 +27,7 @@
 			<option>Mercedez</option>
 		</select>
 
-		<label for="Car Age">Car Age</label>
+		<label for="carage">Car Age</label>
 			<input type="number" id="carage" required>
 
 		
@@ -35,7 +35,7 @@
 			<input type="date" id="dop" required>
 
 		
-		<label for="Password">Password</label>
+		<label for="password">Password</label>
 			<input type="password" id="password" required>
 
 		<input type="submit">
