--- a/main.html
+++ b/main.html
@@ -16,16 +16,17 @@
 		<input type="email" id="email" required>
 
 		<label for="gender_m">Male</label>
-		<input type="radio" name="gender_m" required>
+		<input type="radio" name="gender" required>
 		<label for="gender_f">Female</label>
-			<input type="radio" name="gender_f" required>
+			<input type="radio" name="gender" required>
 
-		<select id="cars">
-		<label for="Car">Car Brands</label>
-			<option>BMW</option>
-			<option>Audi</option>
-			<option>Mercedez</option>
-		</select>
+		
+		<label for="cars">Car Brands</label>
+<select id="cars">
+    <option value="BMW">BMW</option>
+    <option value="Audi">Audi</option>
+    <option value="Mercedes">Mercedes</option>
+</select>
 
 		<label for="carage">Car Age</label>
 			<input type="number" id="carage" required>
@@ -38,7 +39,7 @@
 		<label for="password">Password</label>
 			<input type="password" id="password" required>
 
-		<input type="submit">
+		<input type="submit" value="Submit">
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
