--- a/main.html
+++ b/main.html
@@ -1,49 +1,43 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
 	<form method="post">
 		<label for="name">Name</label>
-		<input type="text" id="name" required>
+		<input type="text" id="name" name="name" required>
 
 		<label for="email">Email</label>
-		<input type="email" id="email" required>
+		<input type="email" id="email" name="email" required>
 
+		<label>Gender</label><br>
+		<input type="radio" id="gender_m" name="gender" value="Male" required>
 		<label for="gender_m">Male</label>
-		<input type="radio" name="gender" required>
-		<label for="gender_f">Female</label>
-			<input type="radio" name="gender" required>
 
-		
+		<input type="radio" id="gender_f" name="gender" value="Female" required>
+		<label for="gender_f">Female</label>
+
 		<label for="cars">Car Brands</label>
-<select id="cars">
-    <option value="BMW">BMW</option>
-    <option value="Audi">Audi</option>
-    <option value="Mercedes">Mercedes</option>
-</select>
+		<select id="cars" name="cars">
+			<option value="">--Select--</option>
+			<option value="BMW">BMW</option>
+			<option value="Audi">Audi</option>
+			<option value="Mercedes">Mercedes</option>
+		</select>
 
 		<label for="carage">Car Age</label>
-			<input type="number" id="carage" required>
+		<input type="number" id="carage" name="carage" required>
 
-		
 		<label for="dop">Date of Purchase</label>
-			<input type="date" id="dop" required>
+		<input type="date" id="dop" name="dop" required>
 
-		
 		<label for="password">Password</label>
-			<input type="password" id="password" required>
+		<input type="password" id="password" name="password" required>
 
-		<input type="submit" value="Submit">
+		<button type="submit">Submit</button>
 	</form>
-    <script type="text/javascript" src="./script.js">
-</script>
 
+	<script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
