--- a/main.html
+++ b/main.html
@@ -6,16 +6,15 @@
 <body>
 	<form method="post">
 		<label for="name">Name</label>
-		<input type="text" id="name" name="name" required>
+		<input type="text" id="name" required>
 
 		<label for="email">Email</label>
 		<input type="email" id="email" name="email" required>
 
-		<label>Gender</label><br>
-		<input type="radio" id="gender_m" name="gender" value="Male" required>
+		<input type="radio" id="gender_m" name="gender" required>
 		<label for="gender_m">Male</label>
 
-		<input type="radio" id="gender_f" name="gender" value="Female" required>
+		<input type="radio" id="gender_f" name="gender"  required>
 		<label for="gender_f">Female</label>
 
 		<label for="cars">Car Brands</label>
