--- a/main.html
+++ b/main.html
@@ -10,12 +10,11 @@
 
 		<label for="email">Email</label>
 		<input type="email" id="email" name="email" required>
+<input type="radio" id="gender_m" name="gender" value="Male" required>
+<label for="gender_m">Male</label>
+<input type="radio" id="gender_f" name="gender" value="Female" required>
+<label for="gender_f">Female</label>
 
-		<input type="radio" id="gender_m" name="gender" required>
-		<label for="gender_m">Male</label>
-
-		<input type="radio" id="gender_f" name="gender"  required>
-		<label for="gender_f">Female</label>
 
 		<label for="cars">Car Brands</label>
 		<select id="cars" name="cars">
