--- a/main.html
+++ b/main.html
@@ -4,38 +4,46 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<form method="post">
-		<label for="name">Name</label>
-		<input type="text" id="name" required>
+	 <form method="post">
+    <!-- Name -->
+    <label for="name">Name</label>
+    <input type="text" id="name" required><br><br>
 
-		<label for="email">Email</label>
-		<input type="email" id="email" name="email" required>
-<input type="radio" id="gender_m" name="gender" value="Male" required>
-<label for="gender_m">Male</label>
-<input type="radio" id="gender_f" name="gender" value="Female" required>
-<label for="gender_f">Female</label>
+    <!-- Email -->
+    <label for="email">Email</label>
+    <input type="email" id="email" required><br><br>
 
+    <!-- Gender -->
+    <label for="gender_m">Male</label>
+    <input type="radio" id="gender_m" name="gender" value="Male" required>
 
-		<label for="cars">Car Brands</label>
-		<select id="cars" name="cars">
-			<option value="">--Select--</option>
-			<option value="BMW">BMW</option>
-			<option value="Audi">Audi</option>
-			<option value="Mercedes">Mercedes</option>
-		</select>
+    <label for="gender_f">Female</label>
+    <input type="radio" id="gender_f" name="gender" value="Female" required><br><br>
 
-		<label for="carage">Car Age</label>
-		<input type="number" id="carage" name="carage" required>
+    <!-- Car Brands -->
+    <label for="cars">Car Brands</label>
+    <select id="cars">
+      <option value="">--Select a brand--</option>
+      <option value="BMW">BMW</option>
+      <option value="Audi">Audi</option>
+      <option value="Mercedez">Mercedez</option>
+    </select><br><br>
 
-		<label for="dop">Date of Purchase</label>
-		<input type="date" id="dop" name="dop" required>
+    <!-- Car Age -->
+    <label for="carage">Car Age</label>
+    <input type="number" id="carage" required><br><br>
 
-		<label for="password">Password</label>
-		<input type="password" id="password" name="password" required>
+    <!-- Date of Purchase -->
+    <label for="dop">Date of Purchase</label>
+    <input type="date" id="dop" required><br><br>
 
-		<button type="submit">Submit</button>
-	</form>
+    <!-- Password -->
+    <label for="password">Password</label>
+    <input type="password" id="password" required><br><br>
 
+    <!-- Submit -->
+    <button type="submit">Submit</button>
+  </form>
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
