--- a/main.html
+++ b/main.html
@@ -7,18 +7,18 @@
 	 <form method="post">
     <!-- Name -->
     <label for="name">Name</label>
-    <input type="text" id="name" required><br><br>
+    <input type="text" id="name" required> 
 
     <!-- Email -->
     <label for="email">Email</label>
-    <input type="email" id="email" required><br><br>
+    <input type="email" id="email" required>
 
     <!-- Gender -->
     <label for="gender_m">Male</label>
     <input type="radio" id="gender_m" name="gender" value="Male" required>
 
     <label for="gender_f">Female</label>
-    <input type="radio" id="gender_f" name="gender" value="Female" required><br><br>
+    <input type="radio" id="gender_f" name="gender" value="Female" required>
 
     <!-- Car Brands -->
     <label for="cars">Car Brands</label>
@@ -31,15 +31,15 @@
 
     <!-- Car Age -->
     <label for="carage">Car Age</label>
-    <input type="number" id="carage" required><br><br>
+    <input type="number" id="carage" required>
 
     <!-- Date of Purchase -->
     <label for="dop">Date of Purchase</label>
-    <input type="date" id="dop" required><br><br>
+    <input type="date" id="dop" required>
 
     <!-- Password -->
     <label for="password">Password</label>
-    <input type="password" id="password" required><br><br>
+    <input type="password" id="password" required>
 
     <!-- Submit -->
     <button type="submit">Submit</button>
