--- a/main.html
+++ b/main.html
@@ -20,8 +20,7 @@
       <option value="BMW">BMW</option>
       <option value="Audi">Audi</option>
       <option value="Mercedez">Mercedez</option>
-    </select><br><br>
-
+    </select>
 		<label for="carage">Car Age</label>
 		<input type="Number" id="carage" required>
 
