--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 		<label for="password">Password</label>
 		<input type="Password" id="password" required>
         
-        <input id="submit" type="submit" value="Submit">
+        <input type='submit' >
     </form>
 
 </body>
