--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <form>
+    <form method="Post">
 		<label for="name">Name</label>
         <input id="name" type="Text" required>
 
