--- a/main.html
+++ b/main.html
@@ -13,13 +13,12 @@
 
 		<label for="email">Email</label>
 		<input id="email" type="Email" required>
-		    <label for="cars">Car Brands</label>
 		
-    <select id="cars">
-      <option value="">--Select a brand--</option>
-      <option value="BMW">BMW</option>
-      <option value="Audi">Audi</option>
-      <option value="Mercedez">Mercedez</option>
+		    <label for="cars">Car Brands</label>
+		  <select id="cars">
+      <option>BMW</option>
+      <option>Audi</option>
+      <option>Mercedez</option>
     </select>
 		<label for="carage">Car Age</label>
 		<input type="Number" id="carage" required>
