--- a/main.html
+++ b/main.html
@@ -9,10 +9,16 @@
 
     <form method="Post">
 		<label for="name">Name</label>
-        <input id="name" type="Text" required>
+        <input id="name"  type="Text" required>
 
 		<label for="email">Email</label>
 		<input id="email" type="Email" required>
+
+		 <label for="gender_m">Male</label>
+        <input type="radio" id="gender_m" name="gender" value="Male" required>
+
+        <label for="gender_f">Female</label>
+        <input type="radio" id="gender_f" name="gender" value="Female" required>
 		
 		    <label for="cars">Car Brands</label>
 		  <select id="cars">
@@ -29,7 +35,7 @@
 		<label for="password">Password</label>
 		<input type="Password" id="password" required>
         
-        <input type='submit' >
+        <input type='submit'>
     </form>
 
 </body>
