--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <form method="Post">
+    <form method="post">
 		<label for="name">Name</label>
         <input id="name"  type="Text" required>
 
@@ -35,7 +35,7 @@
 		<label for="password">Password</label>
 		<input type="Password" id="password" required>
         
-        <input type='submit'>
+        <button type='submit'>Submit</button>
     </form>
 
 </body>
